fixed the overflow issue

--- a/src/components/chat/Chat.scss
+++ b/src/components/chat/Chat.scss
@@ -2,6 +2,7 @@
     flex: .65;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 
     &-header{
         display: flex;
@@ -19,6 +20,11 @@
 
     &-messages{
         flex: 1;
+        overflow: scroll;
+        scrollbar-width: none;
+        &::-webkit-scrollbar{
+            display: none;
+        }
     }
 
     &-input{
